<resources>
    <string name="app_name">ChrisWguTermTracker</string>
    <string name="wgu_term_tracker">WGU Term Tracker</string>
    <string name="terms">Terms</string>
    <string name="fill_with_sample_data">Reset DB to Sample Data</string>
    <string name="title_activity_terms">Terms</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="termtitle">TermTitle</string>
    <string name="termstart">TermStart</string>
    <string name="termend">TermEnd</string>
    <string name="termtitle2">TermTitle :</string>
    <string name="termstart2">TermStart :</string>
    <string name="termend2">TermEnd :</string>
    <string name="courses">Courses</string>
    <string name="delete">Delete</string>
    <string name="coursetitle">Course Title</string>
    <string name="coursestart">Course Start</string>
    <string name="courseend">Course End</string>
    <string name="course_status">Course Status</string>
    <string name="course_mentor_email">Mentor Email</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="dash">-</string>
    <string name="coursetitle2">Course Title :</string>
    <string name="coursestart2">Course Start :</string>
    <string name="courseend2">Course End :</string>
    <string name="assessments">Assessments</string>
    <string name="notes">Notes</string>
    <string name="coursestatus2">Course Status :</string>
    <string name="mentorname2">Mentor Name :</string>
    <string name="mentorphone2">Mentor Phone :</string>
    <string name="mentoremail2">Mentor Email :</string>
    <string name="assessmentend">Assessment Alert Day</string>
    <string name="assessmentstart">Assessment Day</string>
    <string name="assessmenttitle">Assessment Title</string>
    <string name="assessmenttitle2">Assessment Title :</string>
    <string name="assessmentstart2">Assessment Time :</string>
    <string name="assessmentend2">Assessment Alert Time</string>
    <string name="assessmentstatus2">Assessment Info :</string>
    <string name="assessment_status">Assessment Info</string>
    <string name="setAlert">Set Alert</string>
    <string name="assessmentendTime">Assessment Alert Time</string>
    <string name="assessmentstartTime">Assessment Time</string>
    <string name="notestart">Note Text</string>
    <string name="noteId">Note ID</string>
    <string name="noteText">Note Text</string>
    <string name="noteTitle2">Note ID :</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Notifications</string>
    <string name="terms_completed2">Terms Completed :</string>
    <string name="terms_remaining2">Terms Remaining :</string>
    <string name="terms_completed">Terms Completed</string>
    <string name="terms_remaining">Terms Remaining</string>
</resources>
