<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--
    <Button
        android:id="@+id/btn_populate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_with_sample_data"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />
        -->

    <Button
        android:id="@+id/btn_to_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <TextView
        android:id="@+id/terms_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_completed2"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/terms_completed_field"
        app:layout_constraintEnd_toStartOf="@+id/terms_completed_field" />

    <TextView
        android:id="@+id/terms_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_remaining2"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/terms_remaining_field"
        app:layout_constraintStart_toStartOf="@+id/terms_completed" />

    <TextView
        android:id="@+id/terms_completed_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/terms_completed"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintStart_toStartOf="@+id/terms_remaining_field"
        app:layout_constraintTop_toBottomOf="@+id/terms_remaining_field" />

    <TextView
        android:id="@+id/terms_remaining_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_remaining"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>