<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_course_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/coursetitle"
        android:textSize="@dimen/recyclerViewTextSize"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_course_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coursestart"
        android:textSize="@dimen/recyclerViewTextSize"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_course_title" />

    <TextView
        android:id="@+id/text_view_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dash"
        android:textSize="@dimen/recyclerViewTextSize"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        app:layout_constraintStart_toEndOf="@+id/text_course_start"
        app:layout_constraintTop_toBottomOf="@+id/text_course_title" />

    <TextView
        android:id="@+id/text_course_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        android:text="@string/courseend"
        android:textSize="@dimen/recyclerViewTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_course_start" />

    <TextView
        android:id="@+id/text_course_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_status"
        android:textSize="@dimen/recyclerViewTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_course_end" />
 <!--
    <TextView
        android:id="@+id/text_course_mentor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mentor_name"
        android:textSize="@dimen/recyclerViewTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_course_status" />
    <TextView
        android:id="@+id/text_course_mentor_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mentor_phone"
        android:textSize="@dimen/recyclerViewTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_course_mentor_name" />
    <TextView
        android:id="@+id/text_course_mentor_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_mentor_email"
        android:textSize="@dimen/recyclerViewTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_course_mentor_phone" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>
