<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermDetailActivity">
<!--
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_term_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
-->

    <TextView
        android:id="@+id/text_term_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        android:layout_marginStart="4dp"

        android:text="@string/termtitle2"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/text_term_detail_title_field"

        app:layout_constraintStart_toStartOf="parent" />

    <!--
    <TextView
        android:id="@+id/text_view_detail_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" - "
        android:textSize="@dimen/recyclerViewTextSize"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        app:layout_constraintStart_toEndOf="@+id/text_term_detail_start"
        app:layout_constraintTop_toBottomOf="@+id/text_term_detail_title" />
-->

    <TextView
        android:id="@+id/text_term_detail_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        android:layout_marginStart="4dp"
        android:text="@string/termstart2"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/text_term_detail_start_field"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_term_detail_title_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        android:layout_marginBottom="4dp"
        android:background="@null"
        android:hint="@string/termtitle"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toTopOf="@+id/text_term_detail_start_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/text_term_detail_start" />

    <TextView
        android:id="@+id/text_term_detail_start_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        android:layout_marginBottom="10dp"
        android:hint="@string/termstart"

        android:importantForAutofill="no"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_term_detail_title_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/text_term_detail_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        android:text="@string/termend2"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/text_term_detail_end_field"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_term_detail_end_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recyclerViewCardMargins"
        android:layout_marginTop="4dp"

        android:hint="@string/termend"
        android:importantForAutofill="no"
        android:textSize="@dimen/detailsViewTextSize"
        app:layout_constraintStart_toStartOf="@+id/text_term_detail_title_field"
        app:layout_constraintTop_toBottomOf="@+id/text_term_detail_start_field" />

    <Button
        android:id="@+id/button_to_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_term_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/fabBackgroundTint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/ic_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_term_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/fabBackgroundTint"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>